fix: set is long property, change list casting method
- toList() => error on sort